--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,19 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1>Editing Book</h1>
+
+<div class="field">
+  <label for="book_title">Title</label>
+  <input class="book_title" type="text" value="リーダブルコード" name="book[title]" id="book_title">
+</div>
+
+<div class="field">
+  <label for="book_body">Body</label>
+  <textarea class="book_body" name="book[body]" id="book_body">より良いコードを書くためのシンプルで実践的なテクニック</textarea>
+</div>
+
+<div class="actions">
+  <input type="submit" name="commit" value="Update Book" data-disable-with="Update Book">
+</div>
+
+
+<a href="/books/{id}">Show</a> |
+<ahref="/books">Back</a>
