--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,19 +1,12 @@
-<h1>Editing Book</h1>
+<h2>Editing Book</h2>
+<%= form_with model:@book, local: true do |f| %>
+    <p><strong>Title:</strong></p>
+    <%= f.text_field :title %>
+    
+    <p><strong>Body:</strong></p>
+    <%= f.text_area :body %>
+    <%= f.submit 'Update Book' %>
+<% end %>
 
-<div class="field">
-  <label for="book_title">Title</label>
-  <input class="book_title" type="text" value="リーダブルコード" name="book[title]" id="book_title">
-</div>
-
-<div class="field">
-  <label for="book_body">Body</label>
-  <textarea class="book_body" name="book[body]" id="book_body">より良いコードを書くためのシンプルで実践的なテクニック</textarea>
-</div>
-
-<div class="actions">
-  <input type="submit" name="commit" value="Update Book" data-disable-with="Update Book">
-</div>
-
-
-<a href="/books/{id}">Show</a> |
-<ahref="/books">Back</a>
+<%= link_to "Show", book_path(@book) %> |
+<%= link_to "Back", books_path %>
