--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,5 +2,5 @@
 
 <p><strong>Body:</strong><%= @book.body %></p>
 
-<a href="/books/{id}/edit">Edit</a> |
-<a href="/books">Back</a>
+<%= link_to "Edit", edit_book_path(@book) %> |
+<%= link_to "Back", books_path %>
