--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -3,7 +3,8 @@
     <p><strong>Title:</strong></p>
     <%= f.text_field :title %>
     
-    <p><strong>Body:</strong></p>
+    <p><strong>Body:</strong>
+    </p>
     <%= f.text_area :body %>
     <%= f.submit 'Update Book' %>
 <% end %>
