--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,28 +1,35 @@
 <!-- 投稿一覧部分  -->
 <h2>Books</h2>
 <table>
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Body</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        <% @books.each do |book| %>
-        <tr>
-            <td><%= book.title %></td>
-            <td><%= book.body %></td>
-            <td><%= link_to "show", book_path(book) %></td>
-            <td><%= link_to "edit", edit_book_path(book) %></td>
-            <td><%= link_to "destroy", book_path(book), :method => :delete, "data-confirm" => "Are you sure?" %></td>
-        </tr>
-        <% end %>
-    </tbody>
+　<thead>
+    <tr>
+    　<th>Title</th>
+    　<th>Body</th>
+    </tr>
+　</thead>
+　<tbody>
+    <% @books.each do |book| %>
+    <tr>
+    　<td><%= book.title %></td>
+    　<td><%= book.body %></td>
+    　<td><%= link_to "show", book_path(book) %></td>
+    　<td><%= link_to "edit", edit_book_path(book) %></td>
+    　<td><%= link_to "destroy", book_path(book), :method => :delete, "data-confirm" => "Are you sure?" %></td>
+    </tr>
+    <% end %>
+　</tbody>
 </table>
 
 <!-- 新規投稿部分  -->
 <h2>New book</h2>
+<!-- 新規投稿エラー文  -->
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <% @book.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
+<!-- 新規投稿フォーマット  -->
 <%= form_with model:@book, local:true do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
