--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,14 @@
 <h2>Editing Book</h2>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <% @book.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
 <%= form_with model:@book, local: true do |f| %>
     <p><strong>Title:</strong></p>
     <%= f.text_field :title %>
-    
-    <p><strong>Body:</strong>
-    </p>
+    <p><strong>Body:</strong></p>
     <%= f.text_area :body %>
     <%= f.submit 'Update Book' %>
 <% end %>
