--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -22,7 +22,8 @@
 
 <!-- 新規投稿部分  -->
 <h2>New book</h2>
-<!-- 新規投稿エラー文  -->
+
+<!-- 新規投稿エラーメッセージ  -->
 <% if @book.errors.any? %>
   <%= @book.errors.count %>errors prohibited this book from being saved:
   <% @book.errors.full_messages.each do |message| %>
